--- a/app/globals.css
+++ b/app/globals.css
@@ -5,10 +5,23 @@
 @import './prose.css';
 @import './fonts.css';
 
-:root * {
+:root,
+[data-scheme='light'] {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --background-alternative: var(--par-gray-25);
+  --text-hover: var(--par-gray-900);
+  --text-active: var(--par-gray-700);
+}
+
+[data-scheme='dark'] {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+  --background-alternative: var(--par-gray-900);
+  --text-hover: var(--par-gray-100);
+  --text-active: var(--par-gray-300);
 }
 
 body {
