--- a/registry/src/components/TextArea/index.css
+++ b/registry/src/components/TextArea/index.css
@@ -1,21 +1,48 @@
-/* Text Area */
-textarea.text-area {
-  @apply text-body-02 block min-h-[4.25rem] w-full resize-y rounded-md bg-white px-4 py-[0.4375rem] pb-9;
+textarea.par-input.par-textarea {
+  @apply text-body-02 block h-auto w-full resize-y rounded-md px-4 py-3 pb-9;
 }
 
-.text-area-wrapper {
-  @apply relative flex w-full flex-col rounded-md;
+.par-textarea-footer {
+  @apply text-helper-02 pointer-events-none absolute bottom-px left-4 z-10 flex h-9 w-[calc(100%-2rem)] items-center justify-between pb-3 text-[var(--par-color-text-field-count)];
 }
 
-.text-area-footer {
-  @apply text-helper-02 pointer-events-none absolute bottom-0 z-10 flex h-9 w-full items-center justify-between rounded-b-md bg-none px-2.5 text-gray-500;
+textarea.par-input.par-textarea:focus ~ .par-textarea-footer,
+textarea.par-input.par-textarea.error-state ~ .par-textarea-footer {
+  @apply bottom-0.5;
 }
 
-.text-area-footer.reverse {
+.par-textarea-footer.reverse {
   @apply flex-row-reverse;
 }
 
-.text-area-footer > * {
-  @apply pointer-events-auto flex select-none items-center rounded-full bg-gray-200/50 px-1.5 py-0.5 backdrop-blur-sm;
+.par-textarea-footer > button.textarea-clear-btn {
+  @apply text-label-02 pointer-events-auto h-fit min-h-fit w-fit select-none rounded-full px-1.5 py-0.5 backdrop-blur-sm;
 }
-/* Text Area */
+
+/* footer colors */
+
+textarea.par-input ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-enabled)];
+}
+
+textarea.par-input.alternative ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-alternative-enabled)];
+}
+
+/* State css */
+
+textarea.par-input:disabled ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-disabled)];
+}
+
+textarea.par-input.alternative:disabled ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-alternative-disabled)];
+}
+
+textarea.par-input[readonly]:not([data-readonly='not-allowed-input']) ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-readonly)];
+}
+
+textarea.par-input.error-state ~ .par-textarea-footer {
+  @apply bg-[var(--par-color-bg-field-invalid)];
+}
