feat (Textarea): - add mask for footer - add jsdoc for props

--- a/registry/src/components/TextArea/index.css
+++ b/registry/src/components/TextArea/index.css
@@ -3,46 +3,49 @@ textarea.par-input.par-textarea {
 }
 
 .par-textarea-footer {
-  @apply text-helper-02 pointer-events-none absolute bottom-px left-4 z-10 flex h-9 w-[calc(100%-2rem)] items-center justify-between pb-3 text-[var(--par-color-text-field-count)];
-}
-
-textarea.par-input.par-textarea:focus ~ .par-textarea-footer,
-textarea.par-input.par-textarea.error-state ~ .par-textarea-footer {
-  @apply bottom-0.5;
+  @apply text-helper-02 pointer-events-none absolute bottom-0 left-0 z-10 flex h-9 w-full items-center justify-between bg-transparent px-4 pb-3 text-[var(--par-color-text-field-count)];
 }
 
 .par-textarea-footer.reverse {
   @apply flex-row-reverse;
 }
 
+.par-textarea-footer-mask {
+  @apply pointer-events-none absolute bottom-0 left-4 z-10 h-9 w-[calc(100%-2rem)] border-b;
+}
+
 .par-textarea-footer > button.textarea-clear-btn {
   @apply text-label-02 pointer-events-auto h-fit min-h-fit w-fit select-none rounded-full px-1.5 py-0.5 backdrop-blur-sm;
 }
 
-/* footer colors */
-
-textarea.par-input ~ .par-textarea-footer {
-  @apply bg-[var(--par-color-bg-field-enabled)];
+textarea.par-input.par-textarea:focus ~ .par-textarea-footer-mask {
+  @apply border-b-2 border-[var(--par-color-border-field-focused)] !important;
 }
 
-textarea.par-input.alternative ~ .par-textarea-footer {
-  @apply bg-[var(--par-color-bg-field-alternative-enabled)];
+/* footer colors */
+
+textarea.par-input ~ .par-textarea-footer-mask {
+  @apply border-[var(--par-color-border-field-enabled)] bg-[var(--par-color-bg-field-enabled)];
+}
+
+textarea.par-input.alternative ~ .par-textarea-footer-mask {
+  @apply border-[var(--par-color-border-field-enabled)] bg-[var(--par-color-bg-field-alternative-enabled)];
 }
 
 /* State css */
 
-textarea.par-input:disabled ~ .par-textarea-footer {
-  @apply bg-[var(--par-color-bg-field-disabled)];
+textarea.par-input:disabled ~ .par-textarea-footer-mask {
+  @apply border-[var(--par-color-border-field-disabled)] bg-[var(--par-color-bg-field-disabled)];
 }
 
-textarea.par-input.alternative:disabled ~ .par-textarea-footer {
+textarea.par-input.alternative:disabled ~ .par-textarea-footer-mask {
   @apply bg-[var(--par-color-bg-field-alternative-disabled)];
 }
 
-textarea.par-input[readonly]:not([data-readonly='not-allowed-input']) ~ .par-textarea-footer {
-  @apply bg-[var(--par-color-bg-field-readonly)];
+textarea.par-input[readonly]:not([data-readonly='not-allowed-input']) ~ .par-textarea-footer-mask {
+  @apply border-[var(--par-color-border-field-readonly)] bg-[var(--par-color-bg-field-readonly)];
 }
 
-textarea.par-input.error-state ~ .par-textarea-footer {
-  @apply bg-[var(--par-color-bg-field-invalid)];
+textarea.par-input.error-state ~ .par-textarea-footer-mask {
+  @apply border-b-2 border-[var(--par-color-border-field-invalid)] bg-[var(--par-color-bg-field-invalid)];
 }
