doc: update various component specs

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,10 @@
   --text-active: var(--par-gray-300);
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: white;
