--- a/registry/src/components/DatePicker/index.css
+++ b/registry/src/components/DatePicker/index.css
@@ -782,7 +782,7 @@
 }
 
 span.flatpickr-weekday {
-  height: var(--par-width-board-item) !important;
+  min-height: var(--par-width-board-item) !important;
   width: var(--par-width-board-item) !important;
   cursor: default;
   background: 0 0;
@@ -790,7 +790,7 @@ span.flatpickr-weekday {
   margin: 0;
   text-align: center;
 
-  padding: 0.6875rem 0.9375rem 0.4375rem 0.9375rem;
+  padding: 0rem 0.9375rem 0rem 0.9375rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1061,7 +1061,6 @@ span.flatpickr-weekday {
   font-weight: 500;
   margin-right: 0.375rem;
   margin-left: 1rem;
-  width: 4.5rem;
 }
 
 .flatpickr-time .flatpickr-am-pm:focus,
