--- a/registry/src/components/DatePicker/index.css
+++ b/registry/src/components/DatePicker/index.css
@@ -42,6 +42,11 @@
 .date-picker-calendar-button {
   @apply pointer-events-none aspect-square w-10 items-center justify-center p-3;
 }
+
+.flatpickr-calendar-header {
+  @apply mb-2 w-full;
+}
+
 /* Date Picker */
 
 @-webkit-keyframes fpFadeInDown {
@@ -233,7 +238,7 @@
 
 .flatpickr-wrapper {
   width: 100%;
-  position: relative;
+  /* position: relative; input wrapper is relative */
   display: inline-block;
 }
 
@@ -241,10 +246,10 @@
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-
   display: flex;
   padding: 0.25rem 0rem;
-  justify-content: center;
+  margin-bottom: 0.5rem;
+  justify-content: space-between;
   align-items: center;
   align-self: stretch;
 }
@@ -256,13 +261,15 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  height: 2.5rem;
+  height: var(--par-width-board-item, 2.5rem);
+  max-height: 2.5rem;
 }
 
 .flatpickr-months .flatpickr-month {
+  display: flex;
+  align-items: center;
   line-height: 1;
   text-align: center;
-  position: relative;
   overflow: hidden;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -274,16 +281,15 @@
 .flatpickr-months .flatpickr-prev-month {
   text-decoration: none;
   cursor: pointer;
-  position: absolute;
-  top: 0;
   z-index: 3;
   display: flex;
-  height: 2.5rem;
+  height: var(--par-width-board-item, 2.5rem);
+  max-height: 2.5rem;
   padding: 0.5rem 0rem 0.5rem 1.25rem;
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
-  flex: 1 0 0;
+  flex: unset 0 1;
   border-radius: 0.375rem;
   background: var(--par-color-bg-button-ghost-neutral-enabled, rgba(255, 255, 255, 0));
   fill: var(--par-color-text-button-ghost-neutral-enabled, rgba(0, 0, 0, 0.9));
@@ -297,16 +303,6 @@
 .flatpickr-months .flatpickr-next-month i,
 .flatpickr-months .flatpickr-prev-month i {
   position: relative;
-}
-
-.flatpickr-months .flatpickr-next-month.flatpickr-prev-month,
-.flatpickr-months .flatpickr-prev-month.flatpickr-prev-month {
-  left: 0;
-}
-
-.flatpickr-months .flatpickr-next-month.flatpickr-next-month,
-.flatpickr-months .flatpickr-prev-month.flatpickr-next-month {
-  right: 0;
 }
 
 .flatpickr-months .flatpickr-next-month svg,
@@ -373,11 +369,9 @@
 .flatpickr-current-month {
   font-size: 135%;
   font-weight: 300;
-  position: absolute;
-  width: 75%;
-  left: 12.5%;
+  width: 100%;
   line-height: 1;
-  height: 34px;
+  height: 2rem;
   display: inline-block;
   text-align: center;
   -webkit-transform: translate3d(0, 0, 0);
@@ -508,10 +502,10 @@
   color: var(--par-color-text-datepicker-days-normal-enabled, rgba(3, 7, 18, 1));
   cursor: pointer;
   font-weight: 400;
-  width: var(--par-width-board-item);
-  -webkit-flex-basis: var(--par-width-board-item);
-  -ms-flex-preferred-size: var(--par-width-board-item);
-  flex-basis: var(--par-width-board-item);
+  width: var(--par-width-board-item, 2.5rem);
+  -webkit-flex-basis: var(--par-width-board-item, 2.5rem);
+  -ms-flex-preferred-size: var(--par-width-board-item, 2.5rem);
+  flex-basis: var(--par-width-board-item, 2.5rem);
   margin: 0;
   position: relative;
   -webkit-box-pack: center;
@@ -737,12 +731,12 @@
 }
 
 .flatpickr-weekwrapper {
-  width: calc(var(--par-width-board-item) + 0.5rem) !important;
+  width: calc(var(--par-width-board-item, 2.5rem) + 0.5rem) !important;
   box-sizing: border-box;
 }
 
 .flatpickr-weekwrapper span.flatpickr-weekday {
-  width: calc(var(--par-width-board-item) + 0.5rem) !important;
+  width: calc(var(--par-width-board-item, 2.5rem) + 0.5rem) !important;
   padding: 0 0.5rem 0 0;
   display: flex;
   align-items: center;
@@ -751,39 +745,40 @@
 
 .flatpickr-weekwrapper + .flatpickr-rContainer .dayContainer:only-child,
 .flatpickr-weekwrapper + .flatpickr-rContainer .flatpickr-weekdaycontainer:only-child {
-  width: calc(var(--par-width-board-item) * 7 + calc(var(--par-width-board-item)));
-  padding-left: calc(var(--par-width-board-item));
-  margin-left: calc(-1 * (var(--par-width-board-item)) + 0.5rem);
+  width: calc(var(--par-width-board-item, 2.5rem) * 7 + calc(var(--par-width-board-item, 2.5rem)));
+  padding-left: calc(var(--par-width-board-item, 2.5rem));
+  margin-left: calc(-1 * (var(--par-width-board-item, 2.5rem)) + 0.5rem);
 }
 
 .dayContainer,
 .flatpickr-weekdaycontainer {
-  width: calc(var(--par-width-board-item) * 7 + 1rem); /* Add 1rem for paddingX */
+  width: calc(var(--par-width-board-item, 2.5rem) * 7 + 1rem); /* Add 1rem for paddingX */
   padding: 0 0.5rem 0 0.5rem;
 }
 
 .dayContainer:only-child,
 .flatpickr-weekdaycontainer:only-child {
-  width: calc(var(--par-width-board-item) * 7);
+  width: calc(var(--par-width-board-item, 2.5rem) * 7);
   padding: 0 0 0 0;
 }
 
 .dayContainer:not(:only-child):first-child,
 .flatpickr-weekdaycontainer:not(:only-child):first-child {
-  width: calc(var(--par-width-board-item) * 7 + 1.5rem);
+  width: calc(var(--par-width-board-item, 2.5rem) * 7 + 1.5rem);
   padding: 0 0.5rem 0 1rem;
   margin-left: -1rem;
 }
 
 .dayContainer:not(:only-child):last-child,
 .flatpickr-weekdaycontainer:not(:only-child):last-child {
-  width: calc(var(--par-width-board-item) * 7 + 0.5rem);
+  width: calc(var(--par-width-board-item, 2.5rem) * 7 + 0.5rem);
   padding: 0 0 0 0.5rem;
 }
 
 span.flatpickr-weekday {
-  min-height: var(--par-width-board-item) !important;
-  width: var(--par-width-board-item) !important;
+  @apply text-body-compact-01;
+  min-height: var(--par-width-board-item, 2.5rem) !important; /* For long week day text */
+  width: var(--par-width-board-item, 2.5rem) !important;
   cursor: default;
   background: 0 0;
   line-height: 2rem;
@@ -797,7 +792,7 @@ span.flatpickr-weekday {
   align-self: stretch;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 
 .flatpickr-days {
@@ -827,7 +822,6 @@ span.flatpickr-weekday {
   background: 0 0;
   color: rgba(3, 7, 18, 1);
   fill: rgba(3, 7, 18, 1);
-  height: 3rem;
 }
 
 .flatpickr-months .flatpickr-next-month,
@@ -836,7 +830,6 @@ span.flatpickr-weekday {
   align-items: center;
   justify-content: center;
   border-radius: 0.375rem;
-  top: 1rem;
   width: 2.5rem;
 }
 
@@ -869,19 +862,10 @@ span.flatpickr-weekday {
   fill: var(--par-color-text-button-ghost-neutral-pressed, rgba(3, 7, 18, 1));
 }
 
-.flatpickr-months .flatpickr-next-month.flatpickr-prev-month,
-.flatpickr-months .flatpickr-prev-month.flatpickr-prev-month {
-  left: 1rem;
-}
-
-.flatpickr-months .flatpickr-next-month.flatpickr-next-month,
-.flatpickr-months .flatpickr-prev-month.flatpickr-next-month {
-  right: 1rem;
-}
-
 .flatpickr-current-month {
   color: inherit;
-  height: 3rem;
+  height: var(--par-width-board-item, 2.5rem);
+  max-height: 2.5rem;
   align-items: center;
   display: flex;
   padding: 0;
@@ -1036,7 +1020,7 @@ span.flatpickr-weekday {
   top: 0;
   left: 0;
   width: 1px;
-  height: calc(var(--par-width-board-item) * 6 + 0.5rem);
+  height: calc(var(--par-width-board-item, 2.5rem) * 6 + 0.5rem);
   background: var(--par-color-border-datepicker, rgba(203, 203, 203, 1));
 }
 
@@ -1075,11 +1059,12 @@ span.flatpickr-weekday {
 }
 
 .flatpickr-day {
-  font-size: 1rem;
+  font-size: 0.875rem;
   border-radius: 0.375rem;
   box-shadow: none !important;
-  height: var(--par-width-board-item);
-  max-width: var(--par-width-board-item);
+  height: var(--par-width-board-item, 2.5rem);
+  max-height: 2.5rem;
+  max-width: var(--par-width-board-item, 2.5rem);
   line-height: 40px;
   display: flex;
   justify-content: center;
@@ -1089,7 +1074,7 @@ span.flatpickr-weekday {
 
 .flatpickr-months .flatpickr-next-month,
 .flatpickr-months .flatpickr-prev-month {
-  height: 2.5rem;
+  height: v;
   padding: 13px;
 }
 
